Fix project preview styles on mobile

--- a/web/src/components/project-preview-grid.module.css
+++ b/web/src/components/project-preview-grid.module.css
@@ -48,6 +48,14 @@
   }
 }
 
+.twoColGrid {
+  grid-template-columns: 1fr;
+
+  @media (--media-min-medium) {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
 .browseMoreNav {
   composes: small from './typography.module.css';
   margin-top: 1rem;
