--- a/web/src/components/typography.module.css
+++ b/web/src/components/typography.module.css
@@ -176,10 +176,11 @@
 
 .responsiveTitle5 {
   font-weight: 500;
-  font-size: var(--font-base-size);
-  line-height: var(--font-base-line-height);
+  font-size: var(--font-small-size);
+  line-height: var(--font-small-line-height);
   margin: 0.325rem 0 0.325rem;
   border-bottom: 1px solid hsla(0,0%,0%,0.07);
+
   @media (--media-min-small) {
     font-size: var(--font-base-size);
     line-height: var(--font-base-line-height);
